--- a/templates/app/sections/gallery.html
+++ b/templates/app/sections/gallery.html
@@ -4,7 +4,7 @@
     <div class="card-body">
         <div class="text-center d-flex flex-column align-items-center justify-content-center" style="min-height: 150px;">
             <h2 class="card-title mb-3" style="font-size: 2.5rem; display: flex; align-items: center; justify-content: center;">
-                <img src="{% static 'img/icon.svg' %}" alt="PestaGO" class="header-icon" style="height: 60px; margin-right: 15px; vertical-align: middle;">
+                <img src="{% static 'icon.svg' %}" alt="PestaGO" class="header-icon" style="height: 60px; margin-right: 15px; vertical-align: middle;">
                 <span style="vertical-align: middle;">Upload Image</span>
             </h2>
             
