--- a/templates/app/sections/about.html
+++ b/templates/app/sections/about.html
@@ -4,7 +4,7 @@
     <div class="card-header bg-success text-white">
         <div class="text-center d-flex flex-column align-items-center justify-content-center" style="min-height: 80px;">
             <h3 class="mb-0" style="font-size: 2rem; display: flex; align-items: center; justify-content: center;">
-                <img src="{% static 'img/icon.svg' %}" alt="PestaGO" class="header-icon" style="height: 50px; margin-right: 15px; vertical-align: middle;">
+                <img src="{% static 'icon.svg' %}" alt="PestaGO" class="header-icon" style="height: 50px; margin-right: 15px; vertical-align: middle;">
                 <span style="vertical-align: middle;">About PestaGO</span>
             </h3>
         </div>
