--- a/templates/app/sections/home.html
+++ b/templates/app/sections/home.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!-- Logo Container (Main Home Section) -->
 <div class="logo-container text-center py-5 d-flex flex-column align-items-center justify-content-center" style="min-height: 80vh; position: relative;">
-    <img src="{% static 'img/icon.svg' %}" alt="PestaGO Logo" class="logo-img" style="width: 200px; display: block; margin: 0 auto 1.5rem auto;">
+    <img src="{% static 'icon.svg' %}" alt="PestaGO Logo" class="logo-img" style="width: 200px; display: block; margin: 0 auto 1.5rem auto;">
     <div class="logo-text" style="font-size: 3rem; line-height: 1.2;">PestaGO</div>
     <p class="text-muted mt-3" style="font-size: 1.3rem;">Mangosteen Leaf Disease Detection</p>
 </div> 
