--- a/templates/app/sections/about.html
+++ b/templates/app/sections/about.html
@@ -13,7 +13,7 @@
         <div class="mb-4">
             <h4>PestaGO: Mangosteen Leaf Disease Detection</h4>
             <p>
-                PestaGO is a specialized mobile application designed to identify PESTALOTIOPSIS LEAF BLIGHT in mangosteen leaves using YOLOv8, a state-of-the-art object detection model.
+                PestaGO is a specialized mobile application designed to identify <span class="fw-bold">PESTALOTIOPSIS LEAF BLIGHT</span> in mangosteen leaves using YOLOv8, a state-of-the-art object detection model.
             </p>
             <p>
                 The system uses a YOLOv8 object detection model trained on mangosteen leaf images to identify:
